Fix 'no servers' flicker on 'Your Servers' page, sort guilds on 'Your Servers' page so they stay in a consistent order

--- a/app/frontend/src/sass/style.sass
+++ b/app/frontend/src/sass/style.sass
@@ -35,9 +35,16 @@ router-view noscript
 	align-items: center
 	padding: 20px
 	box-sizing: border-box
-	h1
-		font-size: 35px
+	img
+		display: block
+		max-width: 80%
+		width: 300px	
 		margin-bottom: 40px
+	p
+		font-size: 20px
+
+.transparent
+	opacity: 0
 
 .btn
 	background-color: #60b0b9
